--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
+
+
 @layer base {
+
   :root {
     --background: 0 0% 100%;
     --foreground: 224 71.4% 4.1%;
@@ -74,5 +77,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: "Pretendard Variable", sans-serif;
   }
 }
